test/bad/loops/continue1.px

if false do
    skip
else do
    continue
